--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -26,7 +26,7 @@
                 <td><div class="message" id="message"><br><span class="msg-time">11:36:27</span>  -  Msgs cleared</div></td>
             </tr>
             <tr>
-                <td><button onclick="activateGame(players.length)">Start Game</button></td>
+                <td><button onclick="activateGame(players.length())">Start Game</button></td>
             </tr>
             <tr>
                 <td>Players Connected:</td>
