--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -26,7 +26,7 @@
                 <td><div class="message" id="message"><br><span class="msg-time">11:36:27</span>  -  Msgs cleared</div></td>
             </tr>
             <tr>
-                <td><button onclick="activateGame(players.length)">Start Game</button></td>
+                <td><button onclick="activateGame(Object.keys(players).length)">Start Game</button></td>
             </tr>
             <tr>
                 <td>Players Connected:</td>
@@ -276,7 +276,7 @@
         </script>
 
         <script>
-            console.log("length of players: " + players.length);
+            console.log("length of players: " + Object.keys(players).length);
         </script>
 <style type="text/css" id="dark-mode-custom-color">
 :root{
