--- a/Mimic/mimic.html
+++ b/Mimic/mimic.html
@@ -39,9 +39,11 @@
 </body>
 
 <script>
+    // Set document selectors
     createButton = document.getElementById('create-room-button');
 
-    createButton.setAttribute("href", "https://" + window.location.hostname + "/Mimic/send.html");
+    // Assign the link for creating a room
+    createButton.setAttribute("href", "https://" + window.location.hostname + "/Mimic/Host.html");
 </script>
 
 </html>
