--- a/Mimic/mimic.html
+++ b/Mimic/mimic.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="./mimic.css?v=0.1">
+    <link rel="stylesheet" href="./mimic.css?v=0.2">
     <title>Mimic Revanced</title>
 </head>
 
@@ -27,7 +27,7 @@
 
         <div>
             <p>Host a room?</p>
-            <button id="create-room-button">Create</button>
+            <button onclick="window.location.href='https://" + window.location.hostname + "/Mimic/Host.html' id="create-room-button">Create</button>
             <br><br>
         </div>
         <div>
@@ -42,9 +42,6 @@
 <script>
     // Set document selectors
     createButton = document.getElementById('create-room-button');
-
-    // Assign the link for creating a room
-    createButton.setAttribute("href", "https://" + window.location.hostname + "/Mimic/Host.html");
 </script>
 
 </html>
