--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -17,23 +17,23 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <title>Mimic revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.2">
+    <link rel="stylesheet" href="./style.css?v=0.31">
 </head>
 
 <body>
-    <div class="Main">
-        <h2 class="game-title">Mimic Revanced</h2>
+    <header>
+        <div class="top-container">
 
-        <div>
-            <p>Host a room?</p>
-            <button onclick='window.location.href="https://" + window.location.hostname + "/Mimic/Host.html"'
-                id="create-room-button">Create</button>
-            <br><br>
         </div>
+    </header>
+
+    <div class="Main">
         <div>
-            <p>Join a room?</p>
-            <input type="text">
-            <button>Join</button>
+
+        </div>
+        <h2 class="game-title">Mimic Revanced</h2>
+        <div>
+
         </div>
     </div>
 
