--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -28,12 +28,14 @@
     </header>
 
     <div class="Main">
-        <div>
-
+        <div class="Main-top-container">
+            <h2 class="game-title">Mimic Revanced</h2>
         </div>
-        <h2 class="game-title">Mimic Revanced</h2>
-        <div>
+        <div class="Main-mid-container">
+            <h3>Players:</h3>
+            <div>
 
+            </div>
         </div>
     </div>
 
