--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -16,14 +16,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.33">
+    <link rel="stylesheet" href="./style.css?v=0.34">
 </head>
 
 <body>
     <header>
-        <div class="top-container">
-
+        <div class="top-container unselectable">
+            <p class="share-link-prompt-text">Share this link to invite others. (click to copy)</p>
+            <div id="receiver-id" onclick="copyShareLink()" title="Copy this link and send it to your friends.">
+                f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
+            <br>
+            <div id="status" class="status">Connected</div>
         </div>
     </header>
 
@@ -33,50 +38,47 @@
         </div>
         <div class="Main-mid-container">
             <h3>Players:</h3>
-            <div>
-
+            <br>
+            <div id="player-list">
+                <div class="player-container">
+                    <p class="player-name-text">Host</p>
+                    <div class="changeName-button-container">
+                        <i class="fa-solid fa-pen changeName-button"></i>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="Main-bottom-container">
+            <button onclick="activateGame(Object.keys(players).length)">Start Game</button>
+        </div>
     </div>
-
-    <table class="display">
-        <tbody>
-            <tr>
-                <td class="title">Status:</td>
-                <td class="title">Messages:</td>
-            </tr>
-            <tr>
-                <td>
-                    <div id="receiver-id" onclick="copyShareLink()" title="Copy this link and send it to your friends.">
-                        Share link: f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
-                </td>
-                <td>
-                    <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true">
-                    <button type="button" id="sendButton">Send</button>
-                    <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div id="status" class="status">Connected</div>
-                </td>
-                <td>
-                    <div class="message" id="message"><br><span class="msg-time">11:36:27</span> - Msgs cleared</div>
-                </td>
-            </tr>
-            <tr>
-                <td><button onclick="activateGame(Object.keys(players).length)">Start Game</button></td>
-            </tr>
-            <tr>
-                <td>Players Connected:</td>
-            </tr>
-            <tr>
-                <td>
-                    <p id="player-list"></p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    
+    <footer>
+        <div class="footer-container">
+            <table class="display">
+                <tbody>
+                    <tr>
+                        <td class="title">Messages:</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" id="sendMessageBox" placeholder="Enter a message...">
+                            <button type="button" id="sendButton">Send</button>
+                            <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="message" id="message"><br><span class="msg-time">11:36:27</span> - Msgs cleared</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><button onclick="activateGame(Object.keys(players).length)">Start Game</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </footer>
 
     <script src="./peerjsmin.js"></script>
     <script type="text/javascript">
@@ -126,7 +128,7 @@
 
                     console.log("TEST: " + peer.clientPlayerName)
                     console.log('ID: ' + peer.id);
-                    recvId.innerHTML = "Share link: <span id=\"share-link\">https://" + window.location
+                    recvId.innerHTML = "<span id=\"share-link\">https://" + window.location
                         .hostname + "/Mimic/send.html?hostid=" + peer.id + "</span>";
                     status.innerHTML = "Awaiting connection...";
                 });
