--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -18,7 +18,7 @@
     </script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.37">
+    <link rel="stylesheet" href="./style.css?v=0.38">
 </head>
 
 <body>
@@ -41,6 +41,9 @@
             <br>
             <div id="player-list">
                 <div class="player-container">
+                    <div class="">
+
+                    </div>
                     <p class="player-name-text">Host</p>
                     <div class="changeName-button-container">
                         <i class="fa-solid fa-pen changeName-button"></i>
