--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -18,7 +18,7 @@
     </script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.41">
+    <link rel="stylesheet" href="./style.css?v=0.42">
 </head>
 
 <body>
@@ -257,6 +257,7 @@
                 };
 
                 message.innerHTML = message.innerHTML + "<br><span class=\"msg-time\">" + h + ":" + m + ":" + "</span>  -  " + msg;
+                message.scrollTop = message.scrollHeight;
             }
 
             function clearMessages() {
