--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -18,7 +18,7 @@
     </script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.46">
+    <link rel="stylesheet" href="./style.css?v=0.47">
 </head>
 
 <body>
@@ -41,13 +41,16 @@
             <br>
             <div id="player-list">
                 <div class="player-container">
-                    <p class="player-name-text">Host</p>
-                    <div class="changeName-button-container">
-                        <i class="fa-solid fa-pen changeName-button"></i>
+                    <div class="showName-container no-display">
+                        <p class="player-name-text">Host</p>
+                        <div class="changeName-button-container">
+                            <i class="fa-solid fa-pen changeName-button"></i>
+                        </div>
                     </div>
 
-                    <div class="no-display">
-
+                    <div class="changeName-container">
+                        <input type="text" id="changeName-input" placeholder="Enter a name...">
+                        <i class="fa-regular fa-floppy-disk confirm-ChangeName-button"></i>
                     </div>
                 </div>
             </div>
@@ -257,7 +260,8 @@
                     return t;
                 };
 
-                message.innerHTML = message.innerHTML + "<br><span class=\"msg-time\">" + h + ":" + m + ":" + "</span>  -  " + msg;
+                message.innerHTML = message.innerHTML + "<br><span class=\"msg-time\">" + h + ":" + m + ":" +
+                    "</span>  -  " + msg;
                 message.scrollTop = message.scrollHeight;
             }
 
