--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -50,7 +50,7 @@
 
                     <div class="changeName-container">
                         <input type="text" id="changeName-input" placeholder="Enter a name...">
-                        <i class="fa-regular fa-floppy-disk confirm-ChangeName-button"></i>
+                        <i onclick="changePlayerName(peer.id, document.getElementById('changeName-input').value)" class="fa-regular fa-floppy-disk confirm-ChangeName-button"></i>
                     </div>
                 </div>
             </div>
