--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -17,7 +17,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
-    <title>Mimic revanced - Host</title>
+    <title>Mimic Revanced - Host</title>
     <link rel="stylesheet" href="./style.css?v=0.48">
 </head>
 
@@ -215,11 +215,6 @@
                 return;
             }
 
-            function changePlayerName(playerID, newName) {
-                players[playerID]["playerName"] = newName;
-                return;
-            };
-
             function fade() {
                 standbyBox.className = "display-box hidden";
                 goBox.className = "display-box hidden";
@@ -324,6 +319,11 @@
             // Copy the text in the share link element
             navigator.clipboard.writeText(copyText.innerText);
         }
+
+        function changePlayerName(playerID, newName) {
+            players[playerID]["playerName"] = newName;
+            return;
+        };
     </script>
 
     <script src="./mimicGameLogic.js?v=0.27">
