--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -18,7 +18,7 @@
     </script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic Revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.48">
+    <link rel="stylesheet" href="./style.css?v=0.49">
 </head>
 
 <body>
@@ -122,7 +122,9 @@
 
                     recvId.innerHTML = "<span id=\"share-link\">https://" + window.location
                         .hostname + "/Mimic/send.html?hostid=" + peer.id + "</span>";
+                    console.log("TEST1");
                     status.innerHTML = "Awaiting connection...";
+                    console.log("TEST2");
                 });
                 peer.on('connection', function (c) {
                     conn.push(c);
