--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -123,6 +123,7 @@
                     recvId.innerHTML = "<span id=\"share-link\">https://" + window.location
                         .hostname + "/Mimic/send.html?hostid=" + peer.id + "</span>";
                     console.log("TEST1");
+                    console.log(status)
                     status.innerHTML = "Awaiting connection...";
                     console.log("TEST2");
                 });
