--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="Main-bottom-container">
-            <button onclick="activateGame(Object.keys(players).length)">Start Game</button>
+            <p>Waiting for the host to start the game...</p>
         </div>
     </div>
 
