--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -107,9 +107,9 @@
 
     <script src="./peerjsmin.js"></script>
     <script type="text/javascript">
-        players = {}
-
         (function () {
+            players = {};
+
             // Generate a random number between 0 and 1
             let randomNumber = Math.random();
             // Multiply the result by 10 to get a number between 0 and 10
