--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -27,7 +27,7 @@
             <div id="receiver-id" onclick="copyShareLink()" title="Copy this link and send it to your friends.">
                 f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
             <br>
-            <div id="status" class="status">. . .</div>
+            <div id="status" class="status">Connecting . . .</div>
         </div>
     </header>
 
