--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -295,7 +295,6 @@
                 var now = new Date();
                 var h = now.getHours();
                 var m = addZero(now.getMinutes());
-                var s = addZero(now.getSeconds());
 
                 if (h > 12)
                     h -= 12;
@@ -308,7 +307,7 @@
                     return t;
                 };
 
-                message.innerHTML = "<br><span class=\"msg-time\">" + h + ":" + m + ":" + s + "</span>  -  " + msg +
+                message.innerHTML = "<br><span class=\"msg-time\">" + h + ":" + m + ":" + "</span>  -  " + msg +
                     message.innerHTML;
             };
 
@@ -371,19 +370,42 @@
             for (var player in players) {
                 if (peer.id == player) {
                     playersConnectedList = playersConnectedList +
-                    "<div class=\"player-container\"><div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
-                    players[player]["playerName"] +
-                    "</p><div onclick=\"showChangeName(this)\"id=\"changeName-button-container\"class=\"changeName-button-container\"><i class=\"fa-solid fa-pen changeName-button\"></i></div></div><div id=\"changeName-container\"class=\"changeName-container no-display\"><input type=\"text\" id=\"changeName-input\"placeholder=\"Enter a name...\"><i onclick=\"changeOwnName(this, peer.id, document.getElementById('changeName-input').value)\"class=\"fa-regular fa-floppy-disk confirm-ChangeName-button\"></i></div></div>"
+                        "<div class=\"player-container\"><div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                        players[player]["playerName"] +
+                        "</p><div onclick=\"showChangeName(this)\"id=\"changeName-button-container\"class=\"changeName-button-container\"><i class=\"fa-solid fa-pen changeName-button\"></i></div></div><div id=\"changeName-container\"class=\"changeName-container no-display\"><input type=\"text\" id=\"changeName-input\"placeholder=\"Enter a name...\"><i onclick=\"changeOwnName(this, peer.id, document.getElementById('changeName-input').value)\"class=\"fa-regular fa-floppy-disk confirm-ChangeName-button\"></i></div></div>"
                 } else {
                     playersConnectedList = playersConnectedList +
-                    "<div class=\"player-container\"><div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
-                    players[player]["playerName"] +
-                    "</p></div></div>"
+                        "<div class=\"player-container\"><div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                        players[player]["playerName"] +
+                        "</p></div></div>"
                 }
             }
 
             playerListElement.innerHTML = playersConnectedList;
         }
+
+        function showChangeName(e) {
+            let showNameContainer = e.parentElement;
+            let changeNameContainer = showNameContainer.parentElement.lastElementChild;
+            showNameContainer.classList.add('no-display');
+            changeNameContainer.classList.remove('no-display');
+        }
+
+        function changeOwnName(e, playerID, newName) {
+            let changeNameContainer = e.parentElement;
+            let showNameContainer = changeNameContainer.parentElement.firstElementChild;
+            changeNameContainer.classList.add("no-display");
+            showNameContainer.classList.remove("no-display");
+
+            clientPlayerName = newName;
+            changePlayerName(playerID, clientPlayerName);
+        }
+
+        function changePlayerName(playerID, newName) {
+            players[playerID]["playerName"] = newName;
+            updatePlayerList();
+            return;
+        };
     </script>
 </body>
 
