--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -185,9 +185,6 @@
                             break;
                         default:
                             for (let step = 0; step < conn.length; step++) {
-                                console.log(conn.length);
-                                console.log(conn);
-                                console.log(players);
                                 conn[step].send(["chatMessage", {
                                     "playerName": data[1]["playerName"],
                                     "msg": data[1]["msg"]
@@ -357,7 +354,9 @@
                     "</p></div></div>"
                 }
             }
-
+            for (let step = 0; step < conn.length; step++) {
+                conn[step].send(["playersData", players]);
+            }
             playerListElement.innerHTML = playersConnectedList;
         }
     </script>
