--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -132,6 +132,7 @@
         var changeNameButton = document.getElementById("changeNameButton");
         var clearMsgsButton = document.getElementById("clearMsgsButton");
         var connectButton = document.getElementById("connect-button");
+        var playerListElement = document.getElementById("player-list");
 
         (function () {
             var status = document.getElementById("status");
